fix overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,9 @@
 }
 
 
-
+body {
+    overflow-x: hidden;
+}
 
 /*Header*/
 
@@ -546,6 +548,7 @@
         display: flex;
         flex-direction: column;
     }
+
     .quienessomos {
         width: auto;
         height: 100vh;
@@ -570,10 +573,11 @@
     .quienessomos__logo {
         display: none;
     }
-    .form__link{
+
+    .form__link {
         align-items: center;
         font-size: 15px;
-        padding: 8px;   
+        padding: 8px;
     }
 }
 
